--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -28,6 +28,7 @@ html {
 body {
   color: $body-color;
   background-color: $body-bg;
+  text-align: center;
 }
 
 // No `:visited` state is required by default (browsers will use `a`)
